--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,28 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/Base.Theme.AppCompat.Light"
             app:subtitleTextColor="@color/colorPrimaryDark"
-            app:titleTextColor="@color/colorPrimaryDark" />
+            app:titleTextColor="@color/colorPrimaryDark">
+            <LinearLayout
+                android:layout_width="200dp"
+                android:id="@+id/lineartool"
+                android:layout_height="wrap_content"
+                android:weightSum="5"
+                android:visibility="invisible">
+
+                <EditText
+                    android:id="@+id/edittext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:hint="@string/search_for_cou_text"
+                    android:inputType="text"/>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_search"
+                    android:contentDescription="@string/toolbar_search_text"/>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
