--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             app:srcCompat="@mipmap/ic_search" />
 
         <EditText
+            android:id="@+id/main_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4"
