--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,9 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Base.Theme.AppCompat.Light"
+        android:background="@android:color/white"
         app:titleTextColor="@color/colorPrimaryDark"
         app:subtitleTextAppearance="@color/colorPrimaryDark"/>
 
