--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,9 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/Base.Theme.AppCompat.Light"
+            android:background="@android:color/white"
             app:subtitleTextColor="@color/colorPrimaryDark"
             app:titleTextColor="@color/colorPrimaryDark">
             <LinearLayout
