--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -6,10 +6,11 @@
     tools:context=".DiscoveryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-   <android.support.v7.widget.RecyclerView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/discover_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-   </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
